--- a/style-secret.css
+++ b/style-secret.css
@@ -33,7 +33,7 @@ h3 {
 }
 
 ::-webkit-scrollbar-thumb {
-    border: 3px solid #28292bca;
+    border: 3px solid #0e7453ca;
     /* толщина, стиль и цвет рамки */
 }
 
@@ -51,12 +51,13 @@ h3 {
     margin-right: -50%;
     transform: translate(-50%, -50%);
 
-    text-shadow: 0 2px 1px rgba(0, 0, 0, 0.3);
+    text-shadow: 0 2px 1px #3e785a;
 }
 
 .p__inner {
-    color: #b3b3b3;
-    font-size: calc(0.1em + 1vw);
+    color: rgb(239, 236, 172);
+    background: linear-gradient(347deg, rgb(234, 230, 160) 0%, rgb(226, 207, 86) 17%, rgrgb(240, 237, 178)4%, rgba(236,218,102,1) 50%, rgba(242,239,187,1) 66%, rgba(236,218,102,1) 83%, rgba(242,239,187,0.9777626811594203) 100%);
+    font-size: calc(0.2em + 1vw);
     display: flex;
     align-items: baseline;
     justify-content: space-between;
@@ -80,19 +81,19 @@ h3 {
     margin-bottom: 15px;
 
     /* Styles */
-    border: 1px solid #4e3043;
-    /* Fallback */
-    background: rgba(0, 0, 0, 0.15);
+    border: 1px solid #3e785a;
+     /* Fallback */
+    background: rgb(150 152 152);
     border-radius: 2px;
 
     /* Font styles */
     font-family: 'Raleway', 'Lato', Arial, sans-serif;
-    color: #fff;
+    color: rgb(20, 128, 16);
     font-size: 13px;
 }
 
 .img__inner {
-    background: url("../img/form/pl.jpg");
+    background: url("img/splash.jpg");
     width: 100%;
     position: fixed;
     filter: blur(2px);
@@ -102,13 +103,13 @@ h3 {
     border:1px;
     color:#f9f9f9;
     text-transform: uppercase;
-    background-color:#76188750;
+    background-color: #3e785a;
     width: 70%;
     padding: 8px 4px 8px 10px;
     margin-bottom: 15px;
 }
 
-.p__inner a{
-    color:#f9f9f9;
+.p__inner a {
+    color:#ffffff;
     text-decoration: none;
 }
